# AppShip

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SPEC.md  google-play-service-account.md
hermes-assets/skills/devops/appship/: SKILL.md
src/appship/: __init__.py  cli.py
src/appship/tools/: __init__.py  appship_tools.py  deploy_all.py  ios_tools.py
tests/: test_deploy_all.py  test_ios_tools.py  test_tools.py
